[package]
name = "ramp-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
toml = "0.8.19"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.86"
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
odbc-api = "8.1.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
